--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,6 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
-
 .hypothesis/
 .pytest_cache/
 cover/
@@ -76,8 +75,9 @@ docs/_build/
 target/
 
 # Jupyter Notebook
+.ipynb_checkpoints/
+
 *.ipynb
-.ipynb_checkpoints
 
 # IPython
 profile_default/
